--- a/homecss.css
+++ b/homecss.css
@@ -1,4 +1,47 @@
-html {}
 body {
-    height: 95vh;
+  background-color: white;
+}
+h1 {
+  color: black;
+}
+p {
+  color: black;
+}
+
+/* Struttura per avere righe di div affiancati con la stessa altezza */
+.row {
+  display: flex;
+}
+
+.col {
+  flex: 1;
+  padding: 1em;
+}
+
+/* Riga iniziale */
+#nome {
+  flex: 70;
+}
+
+#archivio {
+  flex: 20;
+  text-align: center;
+}
+
+#info {
+  flex: 10;
+}
+
+/* Struttura centrale */
+#corpo {
+  margin-top: 10%;
+}
+
+#testo {
+  flex: 60;
+}
+
+#immagini{
+  flex:40;
+  background-color: pink;
 }
